--- a/src/input.css
+++ b/src/input.css
@@ -2,19 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
     font-family: "CormorantGaramond";
     src: url("/fonts/CormorantGaramond-Regular.ttf") format("woff2");
-}
+} */
 
 @layer components {
     .btn {
         @apply rounded-lg bg-sky-600 p-2 text-center uppercase text-white 
-        hover:ring hover:ring-white active:scale-95 active:transition-transform;
+        hover:ring hover:ring-white active:scale-95 active:transition-transform text-lg font-normal;
     }
 
     .card {
-        @apply flex flex-col items-center justify-center gap-y-2 rounded-lg bg-sky-200 px-2 py-4 text-center;
+        @apply flex flex-col items-center justify-center gap-y-2 rounded-lg p-2 text-center text-lg font-normal
+        bg-sky-200;
+        /* bg-gradient-to-tr from-sky-100 from-5% via-sky-200 via-50% to-sky-100 to-95% leading-tight; */
     }
 }
 
