--- a/src/style.css
+++ b/src/style.css
@@ -560,10 +560,10 @@ video {
 
 .btn:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(251 146 60 / var(--tw-ring-opacity));
 }
 
 .btn:active {
@@ -575,6 +575,13 @@ video {
   transition-duration: 150ms;
 }
 
+@media (min-width: 640px) {
+  .btn {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -582,26 +589,33 @@ video {
   justify-content: center;
   row-gap: 0.5rem;
   border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 230 253 / var(--tw-bg-opacity));
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+  --tw-gradient-from: #e0f2fe var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(224 242 254 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-from-position: 5%;
+  --tw-gradient-to: rgb(186 230 253 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #bae6fd var(--tw-gradient-via-position), var(--tw-gradient-to);
+  --tw-gradient-via-position: 50%;
+  --tw-gradient-to: #e0f2fe var(--tw-gradient-to-position);
+  --tw-gradient-to-position: 95%;
   padding: 0.5rem;
   text-align: center;
   font-size: 1.125rem;
   line-height: 1.75rem;
   font-weight: 400;
-  /* bg-gradient-to-tr from-sky-100 from-5% via-sky-200 via-50% to-sky-100 to-95% leading-tight; */
+  line-height: 1.25;
 }
 
-.-mt-2 {
-  margin-top: -0.5rem;
+@media (min-width: 640px) {
+  .card {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 .mt-1 {
   margin-top: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .flex {
@@ -620,16 +634,8 @@ video {
   height: 20%;
 }
 
-.h-1\/6 {
-  height: 16.666667%;
-}
-
 .h-3\/5 {
   height: 60%;
-}
-
-.h-4\/6 {
-  height: 66.666667%;
 }
 
 .h-\[10\%\] {
@@ -650,14 +656,6 @@ video {
 
 .h-\[30\%\] {
   height: 30%;
-}
-
-.h-\[35\%\] {
-  height: 35%;
-}
-
-.h-\[40\%\] {
-  height: 40%;
 }
 
 .h-\[5\%\] {
@@ -684,9 +682,28 @@ video {
   height: 100%;
 }
 
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
+.h-\[\] {
+  height: ;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[40\%\] {
+  height: 40%;
+}
+
+.h-\[74\%\] {
+  height: 74%;
+}
+
+.h-\[75\] {
+  height: 75;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .w-1\/6 {
@@ -705,12 +722,6 @@ video {
   width: 100%;
 }
 
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -725,6 +736,14 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-normal {
+  justify-content: normal;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -743,28 +762,32 @@ video {
   justify-content: space-evenly;
 }
 
+.justify-stretch {
+  justify-content: stretch;
+}
+
 .gap-y-1 {
   row-gap: 0.25rem;
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
-}
-
-.gap-y-6 {
-  row-gap: 1.5rem;
 }
 
 .gap-y-4 {
   row-gap: 1rem;
 }
 
-.gap-y-7 {
-  row-gap: 1.75rem;
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
-.gap-y-5 {
-  row-gap: 1.25rem;
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-y-12 {
+  row-gap: 3rem;
+}
+
+.place-self-auto {
+  place-self: auto;
 }
 
 .self-center {
@@ -786,19 +809,9 @@ video {
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-500 {
@@ -815,21 +828,15 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-sky-200 {
-  --tw-gradient-from: #bae6fd var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(186 230 253 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-transparent {
   --tw-gradient-from: transparent var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-sky-600 {
-  --tw-gradient-to: rgb(2 132 199 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #0284c7 var(--tw-gradient-via-position), var(--tw-gradient-to);
+.via-orange-400 {
+  --tw-gradient-to: rgb(251 146 60 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #fb923c var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-sky-900 {
@@ -837,27 +844,18 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), #0c4a6e var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.via-sky-950 {
-  --tw-gradient-to: rgb(8 47 73 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #082f49 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-sky-200 {
-  --tw-gradient-to: #bae6fd var(--tw-gradient-to-position);
-}
-
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pt-2 {
@@ -885,11 +883,6 @@ video {
   line-height: 2rem;
 }
 
-.text-2xl\/none {
-  font-size: 1.5rem;
-  line-height: 1;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -907,10 +900,6 @@ video {
   font-weight: 600;
 }
 
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -918,6 +907,12 @@ video {
 .text-orange-400 {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 /* @font-face {
@@ -929,16 +924,10 @@ video {
     .bg-fondo {
         @apply bg-gradient-to-r from-sky-50 from-10% via-white via-50% to-sky-50 to-90%;
     } 
-}¨
-*/
+} */
 
-.\*\:overflow-hidden > * {
-  overflow: hidden;
-}
-
-.\*\:py-3 > * {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.\*\:border-2 > * {
+  border-width: 2px;
 }
 
 .hover\:scale-105:hover {
@@ -957,12 +946,6 @@ video {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.active\:scale-90:active {
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .active\:scale-95:active {
@@ -989,68 +972,11 @@ video {
     height: max-content;
   }
 
-  .sm\:w-1\/2 {
-    width: 50%;
-  }
-
-  .sm\:w-3\/5 {
-    width: 60%;
-  }
-
   .sm\:flex-row {
     flex-direction: row;
   }
 
-  .sm\:items-center {
-    align-items: center;
-  }
-
-  .sm\:gap-0 {
-    gap: 0px;
-  }
-
-  .sm\:gap-x-4 {
-    -moz-column-gap: 1rem;
-         column-gap: 1rem;
-  }
-
-  .sm\:gap-y-0 {
-    row-gap: 0px;
-  }
-
-  .sm\:gap-y-2 {
-    row-gap: 0.5rem;
-  }
-
-  .sm\:p-0 {
-    padding: 0px;
-  }
-
-  .sm\:p-1 {
-    padding: 0.25rem;
-  }
-
-  .sm\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .sm\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .sm\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
   .sm\:pt-0 {
     padding-top: 0px;
-  }
-
-  .sm\:\*\:py-1 > * {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
   }
 }
