--- a/src/style.css
+++ b/src/style.css
@@ -545,9 +545,21 @@ video {
 }
 
 .btn {
+  width: 75%;
   border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+  --tw-gradient-from: #0ea5e9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(14 165 233 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-from-position: 5%;
+  --tw-gradient-to: rgb(2 132 199 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #0284c7 var(--tw-gradient-via-position), var(--tw-gradient-to);
+  --tw-gradient-via-position: 50%;
+  --tw-gradient-to: #0ea5e9 var(--tw-gradient-to-position);
+  --tw-gradient-to-position: 95%;
   padding: 0.5rem;
   text-align: center;
   font-size: 1.125rem;
@@ -556,6 +568,11 @@ video {
   text-transform: uppercase;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: #fff;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .btn:hover {
@@ -577,13 +594,15 @@ video {
 
 @media (min-width: 640px) {
   .btn {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    width: 100%;
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 .card {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -599,7 +618,7 @@ video {
   --tw-gradient-via-position: 50%;
   --tw-gradient-to: #e0f2fe var(--tw-gradient-to-position);
   --tw-gradient-to-position: 95%;
-  padding: 0.5rem;
+  padding: 1rem;
   text-align: center;
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -609,13 +628,21 @@ video {
 
 @media (min-width: 640px) {
   .card {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    height: 100%;
+    width: 25%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
@@ -682,30 +709,6 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-\[40\%\] {
-  height: 40%;
-}
-
-.h-\[74\%\] {
-  height: 74%;
-}
-
-.h-\[75\] {
-  height: 75;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
 .w-1\/6 {
   width: 16.666667%;
 }
@@ -738,10 +741,6 @@ video {
   align-items: center;
 }
 
-.justify-normal {
-  justify-content: normal;
-}
-
 .justify-start {
   justify-content: flex-start;
 }
@@ -750,44 +749,12 @@ video {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
-}
-
 .justify-evenly {
   justify-content: space-evenly;
 }
 
-.justify-stretch {
-  justify-content: stretch;
-}
-
 .gap-y-1 {
   row-gap: 0.25rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
-.gap-y-8 {
-  row-gap: 2rem;
-}
-
-.gap-y-2 {
-  row-gap: 0.5rem;
-}
-
-.gap-y-12 {
-  row-gap: 3rem;
-}
-
-.place-self-auto {
-  place-self: auto;
 }
 
 .self-center {
@@ -848,14 +815,9 @@ video {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pt-2 {
@@ -926,19 +888,9 @@ video {
     } 
 } */
 
-.\*\:border-2 > * {
-  border-width: 2px;
-}
-
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-95:hover {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -963,8 +915,24 @@ video {
     margin-top: 0px;
   }
 
+  .sm\:h-3\/4 {
+    height: 75%;
+  }
+
   .sm\:h-\[100\%\] {
     height: 100%;
+  }
+
+  .sm\:h-\[35\%\] {
+    height: 35%;
+  }
+
+  .sm\:h-\[60\%\] {
+    height: 60%;
+  }
+
+  .sm\:h-\[7\%\] {
+    height: 7%;
   }
 
   .sm\:h-max {
@@ -972,11 +940,43 @@ video {
     height: max-content;
   }
 
+  .sm\:w-0 {
+    width: 0px;
+  }
+
+  .sm\:w-0\.5 {
+    width: 0.125rem;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
 
+  .sm\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+  }
+
+  .sm\:bg-gradient-to-b {
+    background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+  }
+
+  .sm\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .sm\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
   .sm\:pt-0 {
     padding-top: 0px;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
