--- a/src/input.css
+++ b/src/input.css
@@ -2,31 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
-    font-family: "CormorantGaramond";
-    src: url("/fonts/CormorantGaramond-Regular.ttf") format("woff2");
-} */
-
 @layer components {
-    .btn {
-        @apply w-3/4 rounded-lg p-2 text-center uppercase text-white 
+    .btn.btn-primary {
+        @apply w-3/4 rounded-lg p-2 text-center uppercase text-white bg-sky-600
         hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform text-lg font-normal
-        bg-gradient-to-b from-sky-500 from-5% via-sky-600 via-50% to-sky-500 to-95% 
         border border-orange-400 shadow shadow-white
         sm:w-full sm:text-xs;
     }
+    
 
-    .card {
+    .card.io {
         @apply w-full sm:w-1/4 sm:h-full p-4 sm:px-2
         flex flex-col items-center justify-center gap-y-2
         text-lg font-normal leading-tight text-center sm:text-xs
         rounded-lg bg-gradient-to-tr from-sky-100 from-5% via-sky-200 via-50% to-sky-100 to-95%;
          
     }
-}
 
-/* @layer utilities {
-    .bg-fondo {
-        @apply bg-gradient-to-r from-sky-50 from-10% via-white via-50% to-sky-50 to-90%;
-    } 
-} */
+    .btn.skeleton {
+        @apply w-3/4 m-0 rounded-lg p-2 text-center uppercase text-white  bg-sky-600
+        hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform text-lg font-normal
+        border border-orange-400 shadow shadow-white
+        sm:w-full sm:text-xs;
+    }
+    
+    .skeleton.background {
+        @apply bg-slate-50;
+    }
+}
