--- a/src/style.css
+++ b/src/style.css
@@ -740,6 +740,36 @@ html {
   --tw-backdrop-sepia:  ;
 }
 
+.alert {
+  display: grid;
+  width: 100%;
+  grid-auto-flow: row;
+  align-content: flex-start;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+  text-align: center;
+  border-radius: var(--rounded-box, 1rem);
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
+  padding: 1rem;
+  --tw-text-opacity: 1;
+  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
+  --alert-bg: var(--fallback-b2,oklch(var(--b2)/1));
+  --alert-bg-mix: var(--fallback-b1,oklch(var(--b1)/1));
+  background-color: var(--alert-bg);
+}
+
+@media (min-width: 640px) {
+  .alert {
+    grid-auto-flow: column;
+    grid-template-columns: auto minmax(auto,1fr);
+    justify-items: start;
+    text-align: start;
+  }
+}
+
 .btn {
   display: inline-flex;
   height: 3rem;
@@ -1242,11 +1272,10 @@ html {
   transition-duration: 150ms;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .btn.btn-primary {
-    width: 100%;
-    font-size: 0.75rem;
-    line-height: 1rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
@@ -1276,19 +1305,15 @@ html {
   line-height: 1.25;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .card.io {
-    height: 100%;
-    width: 25%;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    font-size: 0.75rem;
-    line-height: 1rem;
+    width: 75%;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
 .btn.skeleton {
-  margin: 0px;
   width: 75%;
   border-radius: 0.5rem;
   border-width: 1px;
@@ -1328,21 +1353,16 @@ html {
   transition-duration: 150ms;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .btn.skeleton {
-    width: 100%;
-    font-size: 0.75rem;
-    line-height: 1rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
 .skeleton.background {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .flex {
@@ -1385,6 +1405,12 @@ html {
   width: 100%;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1399,6 +1425,10 @@ html {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 
 .self-center {
@@ -1434,12 +1464,17 @@ html {
   padding-right: 1.5rem;
 }
 
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.font-normal {
-  font-weight: 400;
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .tracking-widest {
@@ -1475,56 +1510,45 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@media (min-width: 640px) {
-  .sm\:h-3\/4 {
+@media (min-width: 768px) {
+  .md\:h-3\/4 {
     height: 75%;
   }
 
-  .sm\:h-\[35\%\] {
-    height: 35%;
-  }
-
-  .sm\:h-\[60\%\] {
-    height: 60%;
-  }
-
-  .sm\:h-\[7\%\] {
-    height: 7%;
-  }
-
-  .sm\:w-0 {
+  .md\:w-0 {
     width: 0px;
   }
 
-  .sm\:w-0\.5 {
+  .md\:w-0\.5 {
     width: 0.125rem;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
-  .sm\:gap-x-4 {
-    -moz-column-gap: 1rem;
-         column-gap: 1rem;
+  .md\:w-3\/4 {
+    width: 75%;
   }
 
-  .sm\:bg-gradient-to-b {
+  .md\:w-1\/4 {
+    width: 25%;
+  }
+
+  .md\:w-2\/4 {
+    width: 50%;
+  }
+
+  .md\:gap-y-10 {
+    row-gap: 2.5rem;
+  }
+
+  .md\:bg-gradient-to-b {
     background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
   }
 
-  .sm\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .sm\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .sm\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
