--- a/src/input.css
+++ b/src/input.css
@@ -3,32 +3,24 @@
 @tailwind utilities;
 
 @layer components {
-    .btn.btn-primary {
-        @apply w-3/4 rounded-lg p-2 text-center uppercase text-white bg-sky-600
-        hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform text-lg font-normal
-        border border-orange-400 shadow shadow-white
-        md:text-2xl
+    .mi-btn {
+        @apply w-3/4 xl:w-2/6 p-2 md:p-4 xl:p-2 
+        text-lg md:text-xl xl:text-base font-normal uppercase text-white 
+        bg-slate-600 rounded-lg border border-orange-400 shadow shadow-white
+        hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform
         ;
     }
     
 
-    .card.io {
-        @apply w-full p-4 md:w-3/4
-        flex flex-col items-center justify-center gap-y-2
-        text-lg font-normal leading-tight text-center
-        rounded-lg bg-gradient-to-tr from-sky-100 from-5% via-sky-200 via-50% to-sky-100 to-95%
-        md:text-2xl
+    .mi-card {
+        @apply flex flex-col w-full md:w-3/4 xl:w-3/6 
+        p-3 md:p-2 xl:p-2 gap-2 md:gap-2 xl:gap-2 items-center justify-center 
+        text-lg md:text-xl xl:text-base font-normal md:font-medium text-black
+        rounded-lg md:rounded-xl bg-gradient-to-tr from-slate-200 from-10% via-slate-300 via-50% to-slate-200 to-90%
         ;
          
     }
 
-    .btn.skeleton {
-        @apply w-3/4 rounded-lg p-2 text-center uppercase text-white  bg-sky-600
-        hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform text-lg font-normal
-        border border-orange-400 shadow shadow-white
-        md:text-2xl;
-    }
-    
     .skeleton.background {
         @apply bg-slate-50;
     }
