--- a/src/input.css
+++ b/src/input.css
@@ -7,7 +7,8 @@
         @apply w-3/4 xl:w-2/6 p-2 md:p-4 xl:p-2 
         text-lg md:text-xl xl:text-base font-normal uppercase text-white 
         bg-[#117DCB]
-        rounded-lg border border-orange-400 shadow shadow-white
+        rounded-lg border border-orange-400 
+        /* shadow shadow-white */
         hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform
         /* bg-slate-600  */
         ;
