--- a/src/input.css
+++ b/src/input.css
@@ -3,21 +3,24 @@
 @tailwind utilities;
 
 @layer components {
-    .mi-btn {
-        @apply w-3/4 xl:w-2/6 p-2 md:p-4 xl:p-2 
+    .btn {
+        @apply w-3/4 xl:w-2/6 p-2 md:p-3 xl:p-2
+        text-lg md:text-xl xl:text-base
+        hover:ring-2 hover:ring-primary uppercase
+    }
+
+    /* .mi-btn {
+        @apply w-3/4 xl:w-2/6 p-2 md:p-3 xl:p-2 
         text-lg md:text-xl xl:text-base font-normal uppercase text-white 
         bg-[#117DCB]
-        rounded-lg border border-orange-400 
-        hover:ring-2 hover:ring-orange-400 active:scale-95 active:transition-transform
-        ;
-    }
+        rounded-lg border border-primary
+        hover:ring-2 hover:ring-primary active:scale-95 active:transition-transform
+    } */
 
     .mi-card {
         @apply flex flex-col w-full md:w-3/4 xl:w-3/6 
-        p-3 md:p-2 xl:p-2 gap-2 md:gap-2 xl:gap-2 items-center justify-center 
-        text-lg md:text-xl xl:text-base font-medium md:font-medium text-black
-        rounded-lg md:rounded-xl bg-gradient-to-tr from-[#CBE7FA] from-10% via-[#ACCFE8] via-50% to-[#CBE7FA] to-90%
-        ;
-        
+        p-3 md:p-8 xl:p-2 gap-2 md:gap-2 xl:gap-2 items-center justify-center 
+        text-lg md:text-xl xl:text-base font-medium md:font-medium
+        rounded-lg md:rounded-xl text-base-content bg-base-300
     }
 }
